--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -678,7 +678,8 @@
 									   </li>
 									   <li>
 									   <strong>Ejercicio 1</strong>.
-									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">Esquemas de direccionamiento</a></li>
+									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">
+									   Direccionamiento</a></li>
 									   <li>
 									   <strong>Revisión de dudas:</strong> 
 									   Actividad 6</li>
@@ -718,12 +719,12 @@
 									   <strong><span class="auto-style58">Ejercicio 1</span></strong><span class="auto-style58">.
 									   </span>
 									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">
-									   <span class="auto-style58">Esquemas de direccionamiento</span></a></li>
+									   <span class="auto-style58">Direccionamiento</span></a></li>
 									   <li class="auto-style63">
 									   <strong><span class="auto-style58">Ejercicio 2</span></strong><span class="auto-style58">.
 									   </span>
 									   <a href="Ejercicios/Subredes/Ejercicio2_Subredes.docx">
-									   <span class="auto-style58">Esquemas de direccionamiento y subneteo</span></a></li>
+									   <span class="auto-style58">Direccionamiento y subneteo</span></a></li>
 									   <li class="auto-style63">
 									   <span class="auto-style58"><strong>Ejercicio 
 									   3</strong>.
