--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -1122,7 +1122,7 @@
                                                                         
                                        <li class="auto-style25"><strong><span class="auto-style58">Ejercicio 
 									   11.</span></strong><span class="auto-style58">
-									   <a href="Ejercicios/ssh/11_ConfiguracionSeguridad.docx">Configuración de seguridad</a></span></li>
+									   <a href="Ejercicios/ssh/11_ConfiguracionSeguridad.pdf">Configuración de seguridad</a></span></li>
 									   <li class="auto-style113">
 									   <font
  size="-1" class="auto-style25"><strong>Examen Módulo 3</strong></font></li>
