--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -1675,14 +1675,15 @@
 										   <font
  size="-1" face="Arial,Helvetica">Video:                                </font>
 										   </span></b>
-										   <span class="auto-style28">
-										   <font
- size="-1" face="Arial,Helvetica">VLANs</font></span></font></li>
+									   <span class="auto-style28">
+											  	  <font
+ size="-1" face="Arial,Helvetica"><a href="https://www.youtube.com/watch?v=jC6MJTh9fRE">
+									   VLANs</a></font></span></font></li>
 										   <li class="auto-style6">
 										   <font size="-1" color="#663366" face="Tahoma">
 										   <span class="auto-style28">
 										   <font
- size="-1" face="Arial,Helvetica">19. VLANs</font></span></font></li>
+ size="-1" face="Arial,Helvetica"><a href="Presentaciones/19_VLANs.pdf">19. VLANs</a></font></span></font></li>
 									   </ul>
 									   <li class="auto-style6">
 									   <font
@@ -1690,11 +1691,11 @@
 									   Configuración  
 									   VLANs<ul>
 										   <li class="auto-style56">
-										   Ejer12.pkt</li>
+										   <a href="Ejercicios/VLANs/Ejercicio0/ejer14.pkt">Ejer14.pkt</a></li>
 										   <li class="auto-style57">
-										   Ejer12_VLANs.txt</li>
+										   <a href="Ejercicios/VLANs/Ejercicio0/Ejer14_VLANs.txt">Ejer14_VLANs.txt</a></li>
 										   <li class="auto-style57">
-										   ComandosBasicosVLANs.txt</li>
+										   <a href="Ejercicios/VLANs/Ejercicio0/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></li>
 									   </ul>
 									   </li>
                                                                         
@@ -1785,21 +1786,20 @@
                                                     <li>
 													<font
  size="-1" class="auto-style25"><b>
-													Actividad 12:                                </b>
+													Actividad 12:<a href="Actividades/Actividad12_VLANs/12.%20Configuración%20VLANs.docx">
+													</a>                                </b>
 													<span class="auto-style25"> 
-													Configuración básica de 
-													VLANs <span class="auto-style27">
+													<a href="Actividades/Actividad12_VLANs/12.%20Configuración%20VLANs.docx">Configuración básica de 
+													VLANs</a> <span class="auto-style27">
 													(Martes 7 de Junio hasta las 
 													23:59) 
 													<ul>
 														<li>
-														ConfigVLANs.pkt</li>
+														<a href="Actividades/Actividad12_VLANs/ConfigVLANs.pkt">ConfigVLANs.pkt</a></li>
 														<li>
-														Comandos configuración 
-														VLANs.txt</li>
+														<a href="Actividades/Actividad12_VLANs/ComandosConfigVLANs.txt">ComandosConfigVLANs.txt</a></li>
 														<li>
-														Configuración parcial 
-														VLANs.txt</li>
+														<a href="Actividades/Actividad12_VLANs/ConfigParcialVLANs.txt">ConfigParcialVLANs.txt</a></li>
 													</ul>
 													</span></span></font></li>
                                                                         
