--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -1688,8 +1688,8 @@
 									   <li class="auto-style6">
 									   <font
  size="-1" face="Arial,Helvetica"><b>Ejercicio 14: </b>
-									   Configuración  
-									   VLANs<ul>
+									   <a href="Ejercicios/VLANs/Ejercicio0/Ejercicio14_VLANs.docx">Configuración  
+									   VLANs</a><ul>
 										   <li class="auto-style56">
 										   <a href="Ejercicios/VLANs/Ejercicio0/ejer14.pkt">Ejer14.pkt</a></li>
 										   <li class="auto-style57">
