--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -1791,7 +1791,7 @@
 													<span class="auto-style25"> 
 													<a href="Actividades/Actividad12_VLANs/12.%20Configuración%20VLANs.docx">Configuración básica de 
 													VLANs</a> <span class="auto-style27">
-													(Martes 7 de Junio hasta las 
+													(Miércoles 8 de Junio hasta las 
 													23:59) 
 													<ul>
 														<li>
