--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -2032,12 +2032,14 @@
 													<span class="auto-style58">Ejercicio 16.
 													</span>
 													</strong>
-													<span class="auto-style58">VLANs, DHCP, 
+													<span class="auto-style58">
+													<a href="Ejercicios/VLANs/Ejercicio3/Ejer16_VLANs_DHCP.pdf">VLANs, DHCP, 
 													rutas estáticas y por 
-													default</span></span><ul>
-														<li class="auto-style25">Ejer16.pkt</li>
+													default</a></span></span><ul>
 														<li class="auto-style25">
-														Ejer16_ConfigBase.txt</li>
+														<a href="Ejercicios/VLANs/Ejercicio3/Ejer16.pkt">Ejer16.pkt</a></li>
+														<li class="auto-style25">
+														<a href="Ejercicios/VLANs/Ejercicio3/Ejer16_ConfigBase.txt">Ejer16_ConfigBase.txt</a></li>
 													</ul>
 													</li>
                                                                         
