--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -2356,24 +2356,24 @@
  size="-1" face="Tahoma" class="auto-style140">
 													<ul>
 														<li class="auto-style25">
-														20.
-														Protocolos de ruteo</li>
-														<li>
-														<font
- size="-1" class="auto-style25">Ruteo dinámico</font></li>
+														<a href="Presentaciones/20_RuteoDinamico.pdf">
+														20. Ruteo dinámico y RIP</a></li>
 													</ul>
 													</li>
 													</font>
 													<li class="auto-style25">
 													<span class="auto-style120">
 													<strong>Ejercicio 17.
-													</strong>Configuración de OSPF<font
+													</strong>
+													<a href="Ejercicios/RuteoDinamico/Ejercicio1/Ejercicio17_RuteoDinamicoRIP.docx">Configuración de 
+													RIP</a><font
  size="-1" face="Tahoma" class="auto-style58"><ul>
 														<li class="auto-style25">
-														Ejer17.pkt</font></span><font
+														<a href="Ejercicios/RuteoDinamico/Ejercicio1/Ejer17.pkt">Ejer17.pkt</a></font></span><font
  size="-1" color="#663366" face="Tahoma" class="auto-style58"></li>
 														<li class="auto-style144">
-														Comandos</li>
+														<a href="Ejercicios/RuteoDinamico/Ejercicio1/Ejer17.txt">
+														Ejer17.txt</a></li>
 										</font>
 													</ul>
 													</li>
