--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -2469,7 +2469,7 @@
 													</li>
 													<li class="auto-style25">
 													<strong>Ejercicio 19.</strong> 
-													Configuración IPv6</li>
+													<a href="Ejercicios/IPv6/Ejercicio19.%20Configuring%20IPv6%20Addresses%20on%20Network%20Devices%20-%20ILM.docx">Configuración IPv6</a></li>
 													</font></span>
                                                                         
                                                                         
