--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -2451,8 +2451,8 @@
 														<a href="Presentaciones/21_ProtocolosRuteo.pdf">21. 
 														Protocolos de ruteo</a></li>
 														<li class="auto-style25">
-														22. Direccionamiento 
-														IPv6</li>
+														<a href="Presentaciones/22_DireccionamientoIPv6.pdf">22. Direccionamiento 
+														IPv6</a></li>
 													</ul>
 													</li>
 													</font>
@@ -2470,7 +2470,7 @@
 													</li>
 													<li class="auto-style25">
 													<strong>Ejercicio 19.</strong> 
-													<a href="Ejercicios/IPv6/Ejercicio19.%20Configuring%20IPv6%20Addresses%20on%20Network%20Devices%20-%20ILM.docx">Configuración IPv6</a></li>
+													<a href="Ejercicios/IPv6/Ejercicio19.%20Configuring%20IPv6.pdf">Configuración IPv6</a></li>
 													</font></span>
                                                                         
                                                                         
