--- a/Calendario2023/index.html
+++ b/Calendario2023/index.html
@@ -582,6 +582,11 @@
 														<font class="auto-style63">
 														<span class="auto-style58">
 														8. Capa física</span></font></li>
+														<li>
+														<span class="auto-style25">9.
+													    </span>
+													  <font
+ size="-1" class="auto-style25">Cableado estructurado</font></li>
 													</ul>
 													<li class="auto-style25">
 													<font
