--- a/Calendario2023/index.html
+++ b/Calendario2023/index.html
@@ -870,7 +870,7 @@
 									   <a href="Ejercicios/5_Subredes/Ejercicio5_Subredes.docx">Subredes</a></span></li>
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style58">Ejercicio 6</span></strong><span class="auto-style58">.
-									   Subredes</span></li>
+									   <a href="Ejercicios/6_Subredes/Ejercicio6_Subredes.docx">Subredes</a></span></li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
@@ -882,7 +882,7 @@
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 8: </span>
 									   <span class="auto-style27">
-									   El diseño de subredes
+									   <a href="Actividades/Actividad8_Diseño_subredes/8_Diseño_de_subredes.docx">El diseño de subredes</a>
 									   <span class="auto-style25">(Miércoles 24 de Mayo hasta las 
 									   23:59)</span></span></font></li>
 								</ul>
