--- a/Calendario2023/index.html
+++ b/Calendario2023/index.html
@@ -864,6 +864,9 @@
 										   <a href="Presentaciones/12_Subneteo.pdf">12. Subneteo (Longitud fija)</a></li>
 									   </ul>
 									   </li>
+									   <li class="auto-style25"><strong>Ejercicio 
+									   4</strong>.
+									   <a href="Ejercicios/4_Subredes/Ejercicio4_Direccionamiento_Subredes.docx">Direccionamiento y subredes</a></li>
 									   <li class="auto-style63">
 									   <span class="auto-style58"><strong>Ejercicio 
 									   5</strong>.
