--- a/Calendario2023/index.html
+++ b/Calendario2023/index.html
@@ -1090,7 +1090,8 @@
 									   23:59)</span></span></font><ul>
 										   <li>
 										   <font
- size="-1" class="auto-style25"><a href="Actividades/Actividad10_Configuracion_basica/ConfigRouterSwitches.pkt">ConfigRouterSwitches.pkt</a></font></li>
+ size="-1" class="auto-style25"><a href="Actividades/Actividad10_Configuracion_basica/Act10.pkt">
+										   Act10.pkt</a></font></li>
 									   </ul>
 									   </li>
                                                                         
