--- a/Calendario2023/Examenes/ExamenModulo4.html
+++ b/Calendario2023/Examenes/ExamenModulo4.html
@@ -23222,8 +23222,8 @@ a:link
 							<li>
 							<p class="auto-style62">Comandos básicos de 
 							configuración de un ruteador y un switch:
-							<a href="file:///C:/Users/L00614578/Documents/GitHub/Interconexion/Calendario2023/Ejercicios/Comandos.pdf">
-							<strong>Comandos</strong></a> </p>
+							<a href="../Ejercicios/Comandos.pdf">
+							<strong>Comandos</strong> </a> </p>
 							</li>
 						</ul>
 						<p class="auto-style46"><strong>
