--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -552,7 +552,7 @@ a:hover {
 													<a href="Actividades/Actividad4_Diseño_Fisico_Redes/4_Diseño_fisico_redesAgo23.docx">El diseño físico de redes</a></span>
 									   <span class="auto-style25"> <span class="auto-style27">
 												(Miércoles 1 de Noviembre hasta las 
-													23:59)</span></span></font></li>
+													23:59).</span></span></font></li>
 													<li>
 									   			    <span class="auto-style15"><strong>
 			<span class="auto-style25"> 
