--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -621,9 +621,11 @@ a:hover {
 													<font
  size="-1" face="Tahoma" class="auto-style58"><font
  size="-1" class="auto-style25">
+													<strong>
 													<span class="auto-style113">
-													<strong>Examen 
-													Módulo 1</strong></span></font></font></font><ul>
+													Examen 
+													Módulo 1:</span></strong><span class="auto-style120"><a href="Examenes/ExamenModulo1.html"> 
+													Temario</a></span></font></font></font><ul>
 														<li class="auto-style25">
 														<a href="Examenes/PreparacionExamenModulo1.docx">
 														Ejercicios de 
@@ -650,9 +652,9 @@ a:hover {
 													<strong>Actividad 5:</strong>
 													</span>
 													<span class="auto-style139">
-													¿Cuál es la velocidad de 
+													<a href="Actividades/Actividad5_%20SpeedTest_MAC_IP/5_SpeedTest.docx">¿Cuál es la velocidad de 
 													conexión de mi equipo 
-													terminal?
+													terminal?</a>
 									   			 <font
  size="-1" class="auto-style25"><span class="auto-style25">
 													<span class="auto-style27">(Jueves 
