--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -657,8 +657,8 @@ a:hover {
 													terminal?</a>
 									   			 <font
  size="-1" class="auto-style25"><span class="auto-style25">
-													<span class="auto-style27">(Jueves 
-													2 de Noviembre hasta las 
+													<span class="auto-style27">(Viernes 
+													3 de Noviembre hasta las 
 													23:59)</span></span></font></span></li>
                                                                         
   
@@ -835,7 +835,9 @@ a:hover {
  size="-1" class="auto-style25">
 													<span class="auto-style113">
 													<strong>Examen 
-													Módulo 2</strong></span></font></font></font></li>
+													Módulo 2: </strong>
+									   <a href="Examenes/ExamenModulo3.html">
+									   Temario</a></span></font></font></font></li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
