--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -836,8 +836,7 @@ a:hover {
 													<span class="auto-style113">
 													<strong>Examen 
 													Módulo 2: </strong>
-									   <a href="Examenes/ExamenModulo3.html">
-									   Temario</a></span></font></font></font></li>
+									   			 <a href="Examenes/ExamenModulo2.html">Temario</a></span></font></font></font></li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
