--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -614,6 +614,8 @@ a:hover {
 													    </span>
 													  <font
  size="-1" class="auto-style25">Cableado estructurado</font></a></li>
+														<li class="auto-style25">
+													  <a href="Presentaciones/10_Topologias.pdf">10. Topologías</a></li>
 													</ul>
 													<li class="auto-style25">
 													<font
@@ -697,8 +699,6 @@ a:hover {
 													  <a href="Presentaciones/9_CableadoEstructuradoR.pdf">9.
 													  <font
  size="-1" class="auto-style25">Cableado estructurado</font></a></li>
-													  <li class="auto-style25">
-													  <a href="Presentaciones/10_Topologias.pdf">10. Topologías</a></li>
 													</ul>
                                                                         
         
@@ -815,7 +815,12 @@ a:hover {
 													<span class="auto-style113">
 													<strong>Examen 
 													Módulo 2: </strong>
-									   			 <a href="Examenes/ExamenModulo2.html">Temario</a></span></font></font></font></li>
+									   			 <a href="Examenes/ExamenModulo2.html">Temario</a></span></font></font></font><ul>
+														<li>
+														<a href="Examenes/PreparacionExamenModulo2.docx">Ejercicios de 
+														preparación</a></li>
+													</ul>
+									   </li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
