--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -795,6 +795,9 @@ a:hover {
  size="-1" class="auto-style25"><b>Material de clase:                                     </b></font>
 									   <ul>
 										   <li>
+										   <font
+ size="-1" class="auto-style25"><a href="Presentaciones/11_Direccionamiento.pdf">11. Direccionamiento</a></font></li>
+										   <li>
 										   <a href="Presentaciones/12_Subneteo.pdf">12. Subneteo (Longitud fija)</a></li>
 									   </ul>
 									   </li>
@@ -965,7 +968,7 @@ a:hover {
 													El diseño de subredes con 
 													máscaras de longitud 
 													variable (VLSM)</span><span class="auto-style25"><span class="auto-style27">
-													(Domingo 12 de 
+													(Jueves 9 de 
 													Noviembre hasta las 23:59)</span></span></font></li>
 								</ul>
                                                                         
@@ -1091,7 +1094,7 @@ a:hover {
 													equipos de interconexión de 
 													una red
 									   <span class="auto-style25">
-									   <span class="auto-style27">(Martes 14 de 
+									   <span class="auto-style27">(Domingo 12 de 
 									   Noviembre hasta las 
 									   23:59)</span></span></font><ul>
 										   <li>
