--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -809,21 +809,6 @@ a:hover {
 									   4</strong>.
 									   <a href="Ejercicios/4_Subredes/Ejercicio4_Direccionamiento_Subredes.docx">
 									   Direccionamiento y subredes</a></li>
-									   <li>
-													<font
- size="-1" color="#663366" face="Tahoma" class="auto-style58">
-													<font
- size="-1" face="Tahoma" class="auto-style58"><font
- size="-1" class="auto-style25">
-													<span class="auto-style113">
-													<strong>Examen 
-													Módulo 2: </strong>
-									   			 <a href="Examenes/ExamenModulo2.html">Temario</a></span></font></font></font><ul>
-														<li>
-														<a href="Examenes/PreparacionExamenModulo2.docx">Ejercicios de 
-														preparación</a></li>
-													</ul>
-									   </li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
@@ -889,6 +874,21 @@ a:hover {
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style58">Ejercicio 6</span></strong><span class="auto-style58">.
 									   <a href="Ejercicios/6_Subredes/Ejercicio6_Subredes.docx">Subredes</a></span></li>
+									   <li class="auto-style63">
+													<font
+ size="-1" color="#663366" face="Tahoma" class="auto-style58">
+													<font
+ size="-1" face="Tahoma" class="auto-style58"><font
+ size="-1" class="auto-style25">
+													<span class="auto-style113">
+													<strong>Examen 
+													Módulo 2: </strong>
+									   			 <a href="Examenes/ExamenModulo2.html">Temario</a></span></font></font></font><ul>
+														<li class="auto-style58">
+														<a href="Examenes/PreparacionExamenModulo2.docx">Ejercicios de 
+														preparación</a></li>
+													</ul>
+									   </li>
 								</ul>
 								<font color="#663366">
 											  <span class="auto-style136">Después de la sesión:</span></font><ul>
