--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -978,9 +978,9 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 9:                                </b>
 									   <span class="auto-style27">
-													El diseño de subredes con 
+													<a href="Actividades/Actividad9_Diseño_subredes_VLSM/9.%20Diseño%20de%20subredes%20VLSM_A.docx">El diseño de subredes con 
 													máscaras de longitud 
-													variable (VLSM)</span><span class="auto-style25"><span class="auto-style27">
+													variable (VLSM)</a></span><span class="auto-style25"><span class="auto-style27">
 													(Jueves 9 de 
 													Noviembre hasta las 23:59)</span></span></font></li>
 								</ul>
