--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -1103,9 +1103,9 @@ a:hover {
 									   <li>
 									   <font
  size="-1" class="auto-style25"><b>Actividad 10:                                </b>
-									   Configuración básica de los 
+									   <a href="Actividades/Actividad10_Configuracion_basica/10.%20Configuración%20básicaA.docx">Configuración básica de los 
 													equipos de interconexión de 
-													una red
+													una red</a>
 									   <span class="auto-style25">
 									   <span class="auto-style27">(Domingo 12 de 
 									   Noviembre hasta las 
