--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2205,8 +2205,8 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 13:                                </b>
 													<span class="auto-style25"> 
-													Configuración básica de 
-													VLANs y DHCP<span class="auto-style27"><ul>
+													<a href="Actividades/Actividad13_VLANs/13.%20Configuración%20VLANs.docx">Configuración básica de 
+													VLANs y DHCP</a><span class="auto-style27"><ul>
 														<li>
 														<a href="Actividades/Actividad13_VLANs/Act13.pkt">Act13.pkt</a></li>
 														<li>
