--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2065,9 +2065,9 @@ a:hover {
 													</span>
 													</strong>
 													<span class="auto-style58">
-													<a href="Ejercicios/17_VLANs/Ejer17_VLANs_DHCP.pdf">VLANs, DHCP, 
+													VLANs, DHCP, 
 													rutas estáticas y por 
-													default</a></span></span><ul>
+													default</span></span><ul>
 														<li class="auto-style25">
 														<a href="Ejercicios/17_VLANs/Ejer17.pkt">Ejer17.pkt</a></li>
 														<li class="auto-style25">
@@ -2205,8 +2205,8 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 13:                                </b>
 													<span class="auto-style25"> 
-													<a href="Actividades/Actividad13_VLANs/13.%20Configuración%20VLANs.docx">Configuración básica de 
-													VLANs y DHCP</a><span class="auto-style27"><ul>
+													Configuración básica de 
+													VLANs y DHCP<span class="auto-style27"><ul>
 														<li>
 														<a href="Actividades/Actividad13_VLANs/Act13.pkt">Act13.pkt</a></li>
 														<li>
