--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2065,9 +2065,10 @@ a:hover {
 													</span>
 													</strong>
 													<span class="auto-style58">
-													VLANs, DHCP, 
+													<a href="Ejercicios/17_VLANs/Ejer17_VLANs.pdf">VLANs, 
+													VLSM, DHCP, 
 													rutas estáticas y por 
-													default</span></span><ul>
+													default</a></span></span><ul>
 														<li class="auto-style25">
 														<a href="Ejercicios/17_VLANs/Ejer17.pkt">Ejer17.pkt</a></li>
 														<li class="auto-style25">
