--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2065,10 +2065,10 @@ a:hover {
 													</span>
 													</strong>
 													<span class="auto-style58">
-													<a href="Ejercicios/17_VLANs/Ejer17_VLANs.pdf">VLANs, 
+													VLANs, 
 													VLSM, DHCP, 
 													rutas estáticas y por 
-													default</a></span></span><ul>
+													default</span></span><ul>
 														<li class="auto-style25">
 														<a href="Ejercicios/17_VLANs/Ejer17.pkt">Ejer17.pkt</a></li>
 														<li class="auto-style25">
@@ -2209,7 +2209,7 @@ a:hover {
 													Configuración básica de 
 													VLANs y DHCP<span class="auto-style27"><ul>
 														<li>
-														<a href="Actividades/Actividad13_VLANs/Act13.pkt">Act13.pkt</a></li>
+														<a href="Actividades/Actividad13_VLANs/Agosto/Act13.pkt">Act13.pkt</a></li>
 														<li>
 														<font
  size="-1" face="Arial,Helvetica">
