--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2065,10 +2065,10 @@ a:hover {
 													</span>
 													</strong>
 													<span class="auto-style58">
-													VLANs, 
+													<a href="Ejercicios/17_VLANs/Ejer17_VLANs.pdf">VLANs, 
 													VLSM, DHCP, 
 													rutas estáticas y por 
-													default</span></span><ul>
+													default</a></span></span><ul>
 														<li class="auto-style25">
 														<a href="Ejercicios/17_VLANs/Ejer17.pkt">Ejer17.pkt</a></li>
 														<li class="auto-style25">
@@ -2206,8 +2206,8 @@ a:hover {
  size="-1" class="auto-style25"><b>
 													Actividad 13:                                </b>
 													<span class="auto-style25"> 
-													Configuración básica de 
-													VLANs y DHCP<span class="auto-style27"><ul>
+													<a href="Actividades/Actividad13_VLANs/Agosto/13.%20ConfiguracionVLANs.docx">Configuración básica de 
+													VLANs y DHCP</a><span class="auto-style27"><ul>
 														<li>
 														<a href="Actividades/Actividad13_VLANs/Agosto/Act13.pkt">Act13.pkt</a></li>
 														<li>
