--- a/CalendarioAgo23/index.html
+++ b/CalendarioAgo23/index.html
@@ -2332,13 +2332,13 @@ a:hover {
 													</span>
 													</strong>
 													<span class="auto-style58">
-													Extiende el tamaño de tus 
-													VLANs</span></span><ul>
+													<a href="Ejercicios/18_VLANs/Agosto/Ejercicio18_VLANs.docx">Extiende el tamaño de tus 
+													VLANs</a></span></span><ul>
 														<li>
-														<a href="Ejercicios/18_VLANs/Ejer18.pkt">Ejer18.pkt</a></li>
+														<a href="Ejercicios/18_VLANs/Agosto/Ejer18.pkt">Ejer18.pkt</a></li>
 														<li>
 														<span class="auto-style28">
-														<a href="Ejercicios/18_VLANs/Ejer18_ConfigBase.txt">Ejer18_ConfigBase.txt</a></span></li>
+														<a href="Ejercicios/18_VLANs/Agosto/Ejer18_ConfigBase.txt">Ejer18_ConfigBase.txt</a></span></li>
 													</ul>
 													</li>
                                                                         
@@ -2559,6 +2559,13 @@ a:hover {
  size="-1" class="auto-style25"><span class="auto-style113">
 								  <strong>Examen Módulo 4:</strong>
 								  <a href="Examenes/ExamenModulo4.html">Temario</a></span></font></font></li>
+								  <li>
+								  <a href="Examenes/PreparacionExamenModulo4.docx">
+								  Ejercicio: VLSM</a><ul>
+									  <li>
+									  <a href="https://drive.google.com/file/d/144bAPMY4FOBUSNjy2QFz0V2LLwgUupsX/view?usp=drive_link">Video con solución ejercicio VLSM</a></li>
+								  </ul>
+								  </li>
 								</ul>
 								</font>
                                                                         
