--- a/Calendario2024/index.html
+++ b/Calendario2024/index.html
@@ -535,7 +535,7 @@ a:hover {
 									   </ul>
 									   <li class="auto-style25"><strong>
 									   <span class="auto-style25">Ejercicio 1:</span></strong><span class="auto-style25">
-									   <a href="Ejercicios/1_DiseñoRed/1_Diseño_fisico_redes_2024.docx">El diseño físico de redes</a></span></li>
+									   <a href="Ejercicios/1_DiseñoRed/1_Diseño_fisico_redes.docx">El diseño físico de redes</a></span></li>
                                                                         
                                             
       </ul>
