--- a/Calendario2024/index.html
+++ b/Calendario2024/index.html
@@ -253,6 +253,11 @@ a:hover {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+  .auto-style165 {
+	color: #000000;
+	font-weight: normal;
+}
+
   </style>
 </head>
   <body>
@@ -826,7 +831,12 @@ a:hover {
 									   subredes</a>
 									   <span class="auto-style25">(Martes 20 de 
 									   Febrero hasta las 
-									   23:59)</span></span></font></li>
+									   23:59)</span></span></font><ul>
+										   <li class="auto-style165">
+										   <a href="Actividades/Actividad7_Diseño_subredes/2024/7_Diseño_%20de_%20subredes.docx">
+										   Actividad7.docx</a></li>
+									   </ul>
+									   </li>
 								</ul>
                                                                         
                                                                         
