--- a/Calendario2024/index.html
+++ b/Calendario2024/index.html
@@ -831,7 +831,7 @@ a:hover {
 									   subredes</a>
 									   <span class="auto-style25">(Martes 20 de 
 									   Febrero hasta las 
-									   23:59)</span></span></font><ul>
+									   23:59).</span></span></font><ul>
 										   <li class="auto-style165">
 										   <a href="Actividades/Actividad7_Diseño_subredes/2024/7_Diseño_%20de_%20subredes.docx">
 										   Actividad7.docx</a></li>
