--- a/Calendario2024/index.html
+++ b/Calendario2024/index.html
@@ -1538,9 +1538,9 @@ a:hover {
   
       											  <li class="auto-style25">
 												  <strong>Ejercicio 13.</strong>
-												  Configuración de seguridad<ul>
+												  <a href="Ejercicios/13_Seguridad/13_ConfiguracionSeguridad.docx">Configuración de seguridad</a><ul>
 													  <li class="auto-style25">
-													  Ejer13.pkt</li>
+													  <a href="Ejercicios/13_Seguridad/Ejer13.pkt">Ejer13.pkt</a></li>
 												  </ul>
 													</li>
                                                                         
@@ -1671,7 +1671,7 @@ a:hover {
                                             
       								 <li><font class="auto-style25" size="-1">
 									 <b>Actividad 12: </b>
-									 Interconexión de una red local a Internet
+									 <a href="Actividades/Actividad12_Ruta_por_default/v1/12.%20Configuración%20ruta%20por%20default.docx">Interconexión de una red local a Internet</a>
 									   (Viernes 1 de Marzo hasta las 23:59)<span class="auto-style113">
 									 </span>
 									 <ul>
