--- a/Calendario2024/index.html
+++ b/Calendario2024/index.html
@@ -1294,8 +1294,7 @@ a:hover {
 									   10.</span></strong><span class="auto-style25">
 													<a href="Ejercicios/10_SSH/10_ConfiguracionSSH.docx">Configuración ssh</a></span><ul>
 														<li>
-														<a href="Ejercicios/10_SSH/ejer10.pkt">
-														Ejer10.pkt</a></li>
+														<a href="Ejercicios/10_SSH/ejer10.pkt">Ejer10.pkt</a></li>
 													</ul>
 													</li>
 													<li><strong>Ejercicio 11.
@@ -1779,7 +1778,7 @@ a:hover {
 														<li class="auto-style57">
 														<a href="Ejercicios/14_VLANs/Ejer14.txt">Ejer14.txt</a></li>
 														<li class="auto-style57">
-														<a href="Ejercicios/15_VLANs/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></li>
+														<a href="Ejercicios/14_VLANs/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></li>
 													</ul>
 													</li>
 													<li class="auto-style158">
@@ -1793,12 +1792,12 @@ a:hover {
 															  </span></a></span>
 													<ul>
 														<li class="auto-style144">
-														<a href="Ejercicios/16_VLANs/ConfigBase.txt">ConfigBase.txt</a></li>
+														<a href="Ejercicios/15_VLANs/ConfigBase.txt">ConfigBase.txt</a></li>
 														<li class="auto-style25">
 														<font
  size="-1" class="auto-style25"><span class="auto-style25">
 														<span class="auto-style27">
-														<a href="Ejercicios/16_VLANs/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></span></span></font></li>
+														<a href="Ejercicios/14_VLANs/ComandosBasicosVLANs.txt">ComandosConfigVLANs.txt</a></span></span></font></li>
 														<li class="auto-style25">
 														<a href="Ejercicios/15_VLANs/ejer15.pkt">Ejer15.pkt</a></li>
 													</ul>
