--- a/Calendario2024/Examenes/ExamenIntegrador1_Anterior.html
+++ b/Calendario2024/Examenes/ExamenIntegrador1_Anterior.html
@@ -23238,7 +23238,29 @@ a:link
 							<a href="../Ejercicios/Comandos.pdf">
 							<strong><span class="auto-style73">Comandos</span></strong></a></li>
 						  </ul>
-						  <p>&nbsp;</p>
+						  <p class="auto-style72"><font color="#663366">
+						  <span class="auto-style69">
+						  <span class="auto-style73"><strong>
+						  Parte 1: Diseño e 
+						implementación de direccionamiento con máscaras de 
+						longitud variable </strong>(Revisar ejercicios 7 y 8. 
+						  Revisar actividad 9)</span></span></font></p>
+						  <span class="auto-style73">
+						  <p class="auto-style74">Diseño de subredes</p>
+						  <ul class="auto-style74">
+							  <li>Número de bits para hosts</li>
+							  <li>Prefijo de red Máscara de 
+							subred (decimal)</li>
+							  <li>Dirección IP de subred</li>
+							  <li>Primera dirección IP válida</li>
+							  <li>Última dirección IP válida</li>
+							  <li>Dirección IP de broadcast</li>
+						  </ul>
+						  <p class="auto-style74">Asignación de direcciones IP 
+						  válidas a las interfaces del ruteador y a dispositivos 
+						  finales.</p>
+							</span>
+							<p>&nbsp;</p>
 						</div>
                        </td>
                        </tr>
